# orchestratorv2

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  attachments.py  flow_registry.py  graph.py  main.py  models.py
app/llm/: __init__.py  factory.py
app/tools/: __init__.py  sample_agents.py
demos/: README.md  demo_executor_only.py  demo_health.py  demo_list_catalog.py  demo_named_flows.py  demo_orchestrate_context.py  demo_orchestrate_json.py  demo_orchestrate_multipart.py  demo_orchestrate_tools.py  demo_plan_only.py  support.py
orchestrator/: __init__.py  attachments.py  config.py  flow_registry.py  graph.py  llm_audit.py  logging_setup.py  main.py  models.py
orchestrator/llm/: __init__.py  factory.py
orchestrator/tools/: __init__.py  stubs.py
tests/: conftest.py  test_attachments.py  test_flow_registry.py  test_graph.py  test_graph_compile.py  test_logging_audit.py  test_main.py  test_orchestrator_package.py  test_sample_agent_tools.py
